<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hungchoi Pass</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="tutorial">Click \"Connect\" to start calculating data</string>
    <string name="nofind">Welcome to Hungchoi Mini Click The Button and type 1234 as PIN Code</string>
    <string name="connect">Connecting...</string>
    <string name="notsupport">Device does not support Bluetooth</string>
    <string name="cardnumber">"Cardnumber : "</string>
    <string name="current">"Current : "</string>
    <string name="connectBT">Connect</string>
    <string name="connect_failed">Connection Failure</string>
    <string name="BT_ON">...Bluetooth ON...</string>
    <string name="contactus">Contact Us</string>
    <string name="aboutus">About Us</string>
    <string name="electricity">"Electricity : "</string>
    <string name="cardbalance">"Card Balance : "</string>
    <string name="gain">"Gained : "</string>
    <string name="time_spent">Duration :</string>
    <string name="buy">Buy Cards</string>
    <string name="web">Official Website</string>
    <string name="more">More Features</string>
    <string name="button_scan">Scan</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="scanning">Scanning...</string>
    <string name="select_device">Select device</string>
    <string name="none_found"> Not found</string>
    <string name="new_devices">New Devices</string>
    <string name="title_new_devices">New devices</string>
    <string name="title_other_devices">Other Devices</string>
    <string name="name">Name</string>
</resources>
