<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/actBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="7sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="64sp">

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_dark"
                android:drawableLeft="@drawable/ic_bluetooth_white_48dp"
                android:gravity="center_vertical|left"
                android:onClick="connect"
                android:text="@string/connectBT"
                android:textColor="@color/background_material_light"
                android:textSize="30sp" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_light"
            android:drawableLeft="@drawable/ic_credit_card_white_48dp"
            android:gravity="center_vertical|left"
            android:onClick="connect"
            android:text="@string/buy"
            android:textColor="@color/background_material_light"
            android:textSize="30sp" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="#009688"
            android:drawableLeft="@drawable/ic_home_white_48dp"
            android:gravity="center_vertical|left"
            android:text="@string/web"
            android:textColor="@color/background_material_light"
            android:textSize="30sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="64sp">

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="?android:attr/colorPressedHighlight"
            android:drawableLeft="@drawable/ic_feedback_white_48dp"
            android:gravity="center_vertical|left"
            android:text="@string/aboutus"
            android:textColor="@color/background_material_light"
            android:textSize="30sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="64sp">

        <Button
            android:id="@+id/button20"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/holo_orange_dark"
            android:drawableLeft="@drawable/ic_person_add_white_48dp"
            android:gravity="center_vertical|left"
            android:text="@string/contactus"
            android:textColor="@color/background_material_light"
            android:textSize="30sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:background="@android:color/holo_red_light">

        <Button
            android:id="@+id/button11"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="#ff80ab"
            android:drawableLeft="@drawable/ic_expand_more_white_48dp"
            android:gravity="center_vertical|left"
            android:text="@string/more"
            android:textColor="@color/background_material_light"
            android:textSize="30sp" />
    </androidx.cardview.widget.CardView>

</LinearLayout>